src/objects/StudentAcademicCourse__c.object
<CustomObject>
    <description>A representation of a course being taken at WGU wither in the past, current enrollment, or tentatively planned in the future. Includes credited courses such as transferred competency units or requirements met while working on  another degree.</description>
    <fields>
        <fullName>ActiveCurrentTermCourse__c</fullName>
        <description>Indicator to specify if a course is currently in the student&apos;s term and the student is enrolled or passed the course.</description>
        <formula>IF(StudentContact__r.CurrentTerm__c == Term__c &amp;&amp; ( TEXT(Status__c) == &apos;Registered&apos; || TEXT(Status__c) == &apos;Passed&apos; || TEXT(Status__c) == &apos;Not Passed&apos; ), true, false)</formula>
        <inlineHelpText>Indicator to specify if a course is currently in the student&apos;s term and the student is enrolled or passed the course.</inlineHelpText>
        <label>Active Current Term Course</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attempts__c</fullName>
        <description>Roll up summary of child Student Academic Course Attempt.</description>
        <label>Attempts</label>
        <summaryForeignKey>StudentAcademicCourseAttempt__c.StudentAcademicCourse__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CompetencyUnits__c</fullName>
        <description>The number of Competency Units this course is will put towards the student&apos;s degree program.</description>
        <label>Competency Units</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompositeKey__c</fullName>
        <externalId>true</externalId>
        <label>Composite Key</label>
        <length>45</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CourseCode__c</fullName>
        <description>The code the course is registered within Banner and PAMS.</description>
        <label>Course Code</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CourseMentorStudentAssignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent course mentor assign to this student.</description>
        <label>Course Mentor Student Assignment</label>
        <referenceTo>CourseMentorStudentAssignment__c</referenceTo>
        <relationshipLabel>Student Academic Courses</relationshipLabel>
        <relationshipName>Student_Academic_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>The last day of the term this course is enrolled. Will not be filled out on records with no term.</description>
        <inlineHelpText>The last day of the term this course is enrolled. Will not be filled out on records with no term.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FullCourseTitle__c</fullName>
        <label>Full Course Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MentorVerifiedCurrentEngagement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Engaged denotes whether the student is currently &quot;engaged&quot; in the course. This will clear out when the student completes the course.</description>
        <label>Mentor Verified Current Engagement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MentorVerifiedEngagementNotedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentor Verified Engagement Noted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>StudentAcademicCoursesEngagementNoted</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MentorVerifiedEngagementNotedDate__c</fullName>
        <label>Mentor Verified Engagement Noted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RequirementsCompleted__c</fullName>
        <description>Count of requirements where Completed__c is true.</description>
        <label>Requirements Completed</label>
        <summaryFilterItems>
            <field>StudentAcademicCourseRequirement__c.Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>StudentAcademicCourseRequirement__c.StudentAcademicCourse__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RequirementsEngagedPreassessment__c</fullName>
        <description>Count of requirements where EngagedPreassessment__c is true.</description>
        <label>Requirements Engaged Preassessment</label>
        <summaryFilterItems>
            <field>StudentAcademicCourseRequirement__c.EngagedPreassessment__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>StudentAcademicCourseRequirement__c.StudentAcademicCourse__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RequirementsEngaged__c</fullName>
        <description>Count of requirements where Engaged__c is true.</description>
        <label>Requirements Engaged</label>
        <summaryFilterItems>
            <field>StudentAcademicCourseRequirement__c.Engaged__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>StudentAcademicCourseRequirement__c.StudentAcademicCourse__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RequirementsReferred__c</fullName>
        <description>Count of requirements where Referred__c is true.</description>
        <label>Requirements Referred</label>
        <summaryFilterItems>
            <field>StudentAcademicCourseRequirement__c.Referred__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>StudentAcademicCourseRequirement__c.StudentAcademicCourse__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Requirements__c</fullName>
        <description>Number of requirements</description>
        <label>Requirements</label>
        <summaryForeignKey>StudentAcademicCourseRequirement__c.StudentAcademicCourse__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>The first day of the term this course is enrolled. Will not be filled out on records with no term.</description>
        <inlineHelpText>The first day of the term this course is enrolled. Will not be filled out on records with no term.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the course in relation to the student&apos;s progress in it or credit to it.</description>
        <inlineHelpText>The status of the course in relation to the student&apos;s progress in it or credit to it.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waived</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unenrolled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StudentContact__c</fullName>
        <description>The student for which this course is entered.</description>
        <inlineHelpText>The student for which this course is entered.</inlineHelpText>
        <label>Student Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Academic Courses</relationshipLabel>
        <relationshipName>StudentAcademicCourses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <description>If course to enroll in the future then no term code may be specified but might be if Flexible Degree Plan was completed.</description>
        <inlineHelpText>If course to enroll in the future then no term code may be specified but might be if Flexible Degree Plan was completed.</inlineHelpText>
        <label>Term</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Objective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>The version of the course that the student is set to take.</description>
        <label>Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Student Academic Course</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Course Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Academic Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>